# plugin-template

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
app/: main.py
